do some implementation
