# internal/http/model_gen.go
@@ -1,0 +1,45 @@
+// Package http provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
+package http
+
+const (
+	Api_keyScopes       = "api_key.Scopes"
+	Petstore_authScopes = "petstore_auth.Scopes"
+)
+
+// Category defines model for Category.
+type Category struct {
+	Id   *int64 `json:"id,omitempty"`
+	Name string `json:"name"`
+}
+
+// Pet defines model for Pet.
+type Pet struct {
+	Category Category `json:"category"`
+	Id       *int64   `json:"id,omitempty"`
+	Name     string   `json:"name"`
+}
+
+// GetPetsParams defines parameters for GetPets.
+type GetPetsParams struct {
+	// Category The category name to filter pets
+	Category *[]string `form:"category,omitempty" json:"category,omitempty"`
+
+	// From The id of the pet before starting to collect the result set
+	From *int `form:"from,omitempty" json:"from,omitempty"`
+
+	// Limit The numbers of items to return
+	Limit *int `form:"limit,omitempty" json:"limit,omitempty"`
+}
+
+// DeletePetParams defines parameters for DeletePet.
+type DeletePetParams struct {
+	ApiKey *string `json:"api_key,omitempty"`
+}
+
+// AddPetJSONRequestBody defines body for AddPet for application/json ContentType.
+type AddPetJSONRequestBody = Pet
+
+// UpdatePetJSONRequestBody defines body for UpdatePet for application/json ContentType.
+type UpdatePetJSONRequestBody = Pet
