# internal/postgresql/sqlcgen/models.gen.go
@@ -1,0 +1,18 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.25.0
+
+package sqlcgen
+
+import ()
+
+type Category struct {
+	ID   int32
+	Name string
+}
+
+type Pet struct {
+	ID         int32
+	Name       string
+	CategoryID int64
+}
